--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-<%= yield %>
+<%= render 'layouts/header' %>
+<div class='container app-content'>
+  <%= yield %>
+</div>
+<%= render 'layouts/footer' %>
 
 </body>
 </html>
