--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,12 +1,123 @@
 @import "variables";
 
-.app-content {
-  padding: 3em 0;
-  min-height: 50%;
+// HEADER
+#header {
+  #main-header, .container, #main-header > .row { min-height: 100%; height: 100%; }
+  img { max-width: 100%; }
+  #title { padding-top: 4%; }
+  .header-logo { 
+    float: left;
+    height: 87px;
+    width: 298px;
+    background-image: image-url('ORS_identity.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    a { display: none; }
+  }
+  .nav {
+    float: right;
+    padding: 70px 50px 0 0;
+    li { 
+      display: inline;
+      padding-right: 40px;
+    }
+  }
+  
+  #organisation-logo {
+    height:100%;
+    max-height: 100%;
+    img {
+      padding: 0.5em;
+      max-height: 95%;
+      max-width: 95%;
+    }
+  }
+
+  #authentication-bar{
+    //background: $grey-3;
+    border-bottom: 1px solid $grey-18;
+    height: 100px;
+
+    #authentication-buttons-group {
+      text-align: right;
+    }
+  }
+
+  #main-header {
+    border-bottom: 1px solid $grey-18;
+
+    #shape {
+      position: relative;
+      right: 0;
+      min-height: 100%;
+      height: 100%;
+      background: $shape-color;
+      /* transform: skew(-20deg);
+      -webkit-transform: skew(-20deg);
+      -moz-transform: skew(-20deg);
+      -o-transform: skew(-20deg); */
+      text-align: center;
+      #ors-logo { padding-top: 15%; }
+    }
+  }
 }
 
-#header { height: 20%; }
-#footer { height: 28%; }
+// FOOTER
+#footer {
+  background: $blue;
+  position: relative;
+  clear: both;
+  height: 150px;
+  margin-top: -150px;
+
+  #footer-menu {
+    h1, h2, h3, h4, h5, h6, p, a { color: $white; }
+    padding: 26px;
+
+    .heading { font-weight: bold; }
+    a { text-decoration: none; }
+    li { padding: 0.4em 0;}
+
+    .btn {
+      display: inline-block;
+      -webkit-border-radius: 0.2em;
+      -o-border-radius: 0.2em;
+      -moz-border-radius: 0.2em;
+      border-radius: 0.2em;
+      padding: 10px;
+      border: solid $white 1px;
+      text-decoration: none;
+      &:hover {
+        text-decoration: none;
+        background: $blue-dark;
+      }
+    }
+  }
+
+  #copyright-bar {
+    position: relative;
+    bottom: 0;
+    //background: $white;
+    padding: 5px 0;
+    width: 100%;
+    #right { text-align: right; }
+  }
+}
+
+.app-content {
+  padding: 3em 0;
+  min-height: 100%;
+}
+
+.wrapper {
+  padding-top: 20px;
+  padding-bottom: 200px;
+  overflow: auto;
+}
+
+.content {
+  min-height: 200px;                
+}
 
 .container {
   width : 100%;
