--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,21 +1,21 @@
 <div id="header">
   <div id="authentication-bar">
-    <div id="authentication-buttons-group" class="container"> 
+    <div id="authentication-buttons-group" class="container">
       <strong class='header-logo'>
         <%= link_to 'ORS-API', root_path %>
       </strong>
       <ul class='nav'>
-        <li><%= link_to 'API Documentation', root_path %></li>
+        <li><%= link_to 'API Documentation', '/documentation' %></li>
         <% if current_user %>
           <li>
             <%= link_to (current_user.first_name.present? ? current_user.first_name : current_user.email), user_path(current_user) %>
-          </li> 
+          </li>
           <li><%= link_to "Logout", logout_path(:lang => current_user.language) %></li>
         <% else %>
           <li><%= link_to "Sign up", new_user_path(:lang => (params[:lang]||"en")) %></li>
           <li><%= link_to "Login", new_user_session_path(:lang => (params[:lang]||"en")) %></li>
           <li>
-            <%= select :display, :language, [["English","en"], ["Français","fr"]], {:selected => (params[:lang] || "en")}  %>
+            <%= select :display, :language, [["English","en"], ["Français","fr"]], {:selected => (params[:lang] || "en")} %>
           </li>
           <script type="text/javascript">
             $("#display_language").change(function(){
