--- a/app/views/layouts/apipie/apipie.html
+++ b/app/views/layouts/apipie/apipie.html
@@ -11,7 +11,7 @@
   <![endif]-->
 </head>
 <body>
-  <div class="container">
+  <div class="container app-content">
     <div id="header">
       <div id="authentication-bar">
         <div id="authentication-buttons-group" class="container">
@@ -19,6 +19,9 @@
             <%= link_to 'ORS-API', root_path %>
           </strong>
         </div>
+      </div>
+      <div class='back-button'>
+        <%= link_to 'Back', root_path %>
       </div>
     </div>
     <div class="wrapper">
