Use handlebars and lodash to group questions

--- a/app/views/questionnaires/show.html.erb
+++ b/app/views/questionnaires/show.html.erb
@@ -6,20 +6,7 @@
     <li data-container='questions'>Questions</li>
   </ul>
   <div class='questionnaire-tab-container'>
-    <div class='questionnaire-details active-container'>
-      <ul class='details-list'></ul>
-      <h4> Respondents </h4>
-      <table class='respondents-table'>
-        <thead>
-          <tr>
-            <th> Name </th>
-            <th> Status </th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
-    <div class='questions'>
-    </div>
+    <div class='questionnaire-details active-container'></div>
+    <div class='questions'></div>
   </div>
 </div>
