First implementation of question modal

--- a/app/assets/javascripts/templates/questionnaire/questions.hbs
+++ b/app/assets/javascripts/templates/questionnaire/questions.hbs
@@ -9,9 +9,9 @@
   </thead>
   <tbody>
     {{#each this}}
-      <tr>
-        <td>{{title}}</td>
-        <td>{{type}}</td>
+      <tr class="question-row">
+        <td>{{question.title}}</td>
+        <td>{{question.type}}</td>
       </tr>
     {{/each}}
   </tbody>
