Show responses of a question (dummy data)

--- a/app/assets/javascripts/templates/questionnaire/questions.hbs
+++ b/app/assets/javascripts/templates/questionnaire/questions.hbs
@@ -9,7 +9,7 @@
   </thead>
   <tbody>
     {{#each this}}
-      <tr class="question-row">
+      <tr class="question-row" data-question_id="{{question.id}}">
         <td>{{question.title}}</td>
         <td>{{question.type}}</td>
       </tr>
