Different table for numeric questions

--- a/app/assets/javascripts/templates/question/question_modal.hbs
+++ b/app/assets/javascripts/templates/question/question_modal.hbs
@@ -5,6 +5,12 @@
     {{#if is_mandatory}}
       <p> This question is mandatory </p>
     {{/if}}
-    {{> question/_responses responses=grouped_responses}}
+
+    <h4> Responses </h4>
+    {{#if grouped_responses}}
+      {{> question/_multiple_responses responses=grouped_responses}}
+    {{else}}
+      {{> question/_numeric_responses responses=responses}}
+    {{/if}}
   </div>
 </div>
