--- a/app/views/questionnaires/show.html.erb
+++ b/app/views/questionnaires/show.html.erb
@@ -1,6 +1,5 @@
-<h1> <%= @questionnaire.title %> </h1>
-
-<div class='questionnaire-info' data-questionnaire_id=<%= @questionnaire.id%>>
+<div class='questionnaire-info'>
+  <h1></h1>
   <ul class='questionnaire-tabs'>
     <li class='active' data-container='questionnaire-details'>Questionnaire details</li>
     <li data-container='questions'>Questions</li>
