--- a/app/assets/javascripts/templates/question/_response_tooltip.hbs
+++ b/app/assets/javascripts/templates/question/_response_tooltip.hbs
@@ -1,7 +1,7 @@
 <div class="tooltip">
   <ul>
-    {{#each respondents}}
-      <li>{{this}}</li>
+    {{#each answers}}
+      <li>{{answer.respondent}}</li>
     {{/each}}
   </ul>
 </div>
