Restyle questionnaire details page and tables

--- a/app/assets/javascripts/templates/questionnaire/questions.hbs
+++ b/app/assets/javascripts/templates/questionnaire/questions.hbs
@@ -1,6 +1,6 @@
 {{#each sections}}
   <h3> {{@key}} </h3>
-  <table id="{{@key}}">
+  <table id="{{@key}}" class="questions-table">
   <thead>
     <tr>
       <th class="title">Title</th>
