Closing button more visible

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -54,7 +54,7 @@ table {
 }
 
 .close {
-  background: #606061;
+  background: $grey-18;
   color: #FFFFFF;
   line-height: 25px;
   position: absolute;
@@ -72,7 +72,6 @@ table {
   box-shadow: 1px 1px 3px #000;
 }
 
-.close:hover { background: #00d9ff; }
 
 div.tooltip {
   position: relative;
