Change intro text

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,23 @@
 <h1> ABOUT ORS-API </h1>
 
-<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
+<div class="row padded">
+  <p>
+    The Online Reporting System (ORS) Application Programming Interface (API) enables institutions to request data collected by MEAs using ORS, and display this data on their own websites. The API provides information on both questionnaires and individual question types.
+  </p>
+</div>
+<div class="row padded">
+  <p>
+    For example, MEAs can display response rates for particular reports on their website using live data, as well as displaying live  information on questions that have been answered by reporting parties.
+  </p>
+</div>
+<div class="row padded">
+  <p>
+    The API provides information on questionnaire details (including percentage of questionnaires submitted, languages a questionnaire is available in and date of creation) and collated answers of all respondents to question types (including numeric and multiple choice questions).
+  </p>
+</div>
+<div class="row padded">
+  <p>
+    The technical documentation available here provides details on how to make use of the Online Reporting System API.
+  </p>
+</div>
 
