--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -5,11 +5,11 @@
   #main-header, .container, #main-header > .row { min-height: 100%; height: 100%; }
   img { max-width: 100%; }
   #title { padding-top: 4%; }
-  .header-logo { 
+  .header-logo {
     float: left;
-    height: 87px;
-    width: 298px;
-    background-image: image-url('ORS_identity.jpg');
+    height: 150px;
+    width: 180px;
+    background-image: image-url('ORS_identity.png');
     background-repeat: no-repeat;
     background-size: 100%;
     text-indent: -9999px;
@@ -24,13 +24,13 @@
   }
   .nav {
     float: right;
-    padding: 70px 50px 0 0;
-    li { 
+    padding: 120px 50px 0 0;
+    li {
       display: inline;
       padding-right: 40px;
     }
   }
-  
+
   #organisation-logo {
     height:100%;
     max-height: 100%;
@@ -44,7 +44,7 @@
   #authentication-bar{
     //background: $grey-3;
     border-bottom: 1px solid $grey-18;
-    height: 100px;
+    height: 150px;
 
     #authentication-buttons-group {
       text-align: right;
@@ -134,7 +134,7 @@
 }
 
 .content {
-  min-height: 200px;                
+  min-height: 200px;
 }
 
 .container {
